made css changes to show image correctly aligned

--- a/webroot/css/freegal_styles.css
+++ b/webroot/css/freegal_styles.css
@@ -51,7 +51,6 @@ form, fieldset{
 	left:215px;
 	width:206px;
 	height:48px;
-	text-indent:-9999px;
 	overflow:hidden;
 }
 .visual .heading-public-library a{
